clusters/in-cluster/openwebui/resources/openwebui-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: openwebui
  annotations:
    external-dns.alpha.kubernetes.io/hostname: openwebui.bongima.be
    external-dns.alpha.kubernetes.io/target: traefik.bongima.be
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`openwebui.bongima.be`)
      kind: Rule
      services:
        - name: open-webui
          port: 80
